tdf#89890 DOCX import: fix too large num pic bullet

Reading SwWW8ImplReader::CoreLoad()'s "update graphic bullet
information" block, it turns out that the numbering picture bullet's
height should be independent from the supplied bitmap, and only its
aspect ratio should be respected.

Change-Id: I1300aa0397a8098df2a3170af795fbba47fd2a9e
Reviewed-on: https://gerrit.libreoffice.org/16500
Reviewed-by: Miklos Vajna <vmiklos@collabora.co.uk>
Tested-by: Jenkins <ci@libreoffice.org>